<resources>
    <string name="brand">Herbario Nacional de Nicaragua</string>
    <string name="app_name">Herbario Nacional</string>
    <string name="specimens">Especímenes</string>
    <string name="plants">Plantas</string>
    <string name="fungi">Hongos</string>
    <string name="search">Buscar</string>
    <string name="notifications">Notificaciones</string>
    <string name="profile">Perfil</string>
    <string name="register">Regístrate</string>
    <string name="login">Iniciar sesión</string>
    <string name="logoutNotification">Has cerrado sesión</string>
    <string name="continue_as_a_guest">Continuar como invitado</string>
    <string name="attention">Inicia sesión para que puedas registrar y visualizar todas tus fichas técnicas.</string>
    <string name="empty_fields">Introduzca nombre de usuario y contraseña.</string>
    <string name="empty_fields_register">Rellene todos los campos solicitados.</string>
    <string name="empty_fields_data_sheet">Rellene y seleccione todos los campos solicitados</string>
    <string name="login_success">Inicio de sesión exitoso.</string>
    <string name="register_success">Registro exitoso. Inicie sesión.</string>
    <string name="unauthorized">No autorizado</string>
    <string name="unauthenticated">No autenticado. Inicia sesión o regístrate</string>
    <string name="required">* Requerido</string>
    <string name="internet_connection_error">Ha ocurrido un error. Fallo de conexión al servidor.</string>

    <!-- Datos de Colector -->
    <!-- hints -->
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="cellphoneNumber">Teléfono celular</string>
    <string name="referenceNumber">Número de referencia</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <string name="forgotten_password">¿Has olvidado tu contraseña?</string>
    <string name="reset_your_password">Restablecimiento de contraseña</string>
    <string name="reset">Restablecer</string>
    <string name="terms">Al crear tu cuenta, aceptas los Términos de Servicio y Políticas de Privacidad</string>

    <!-- Data sheet options -->
    <string name="plant">Planta</string>
    <string name="fungus">Hongo</string>

    <string name="or">o</string>

    <!-- Plant -->
    <string name="number_specimens">Número de ejemplares colectados</string>
    <string name="common_name">Nombre común</string>
    <string name="family">Familia</string>
    <string name="genus">Género</string>
    <string name="specimen_description">Ingrese una descripción de especímen</string>
    <string name="location_data">Datos de Ubicación</string>
    <string name="specimen_data">Datos de Espécimen</string>
    <string name="habitat_data">Datos de Hábitat</string>
    <string name="sucess">Ficha técnica registrada exitosamente.</string>

    <!-- Fungi -->
    <string name="color">Color</string>
    <string name="change_of_color">Cambios de color</string>
    <string name="smell">Olor</string>

    <!-- Location -->
    <string name="coordinates">Coordenadas</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="state">Estado/Provincia/Condado</string>
    <string name="city">Ciudad</string>
    <string name="specific_collection_area">Área de recolección específica</string>

    <!-- Buttons -->
    <string name="cancel">Cancelar</string>
    <string name="registerSpecimen">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Imagen</string>

    <!-- Profile -->
    <string name="logout">Cerrar sesión</string>
    <string name="my_specimens">Mis fichas técnicas</string>
    <string name="close_button">Close Button</string>
    <string name="searching">Buscando...</string>
    <string name="invalid_new_type">Nuevo tipo inválido</string>
    <string name="logoutNotification">Has cerrado sesión</string>

>>>>>>> bb662f4a5d04a44ce9cac49d7fdf57ba2bcf2b05
</resources>
