<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activities.NoLoginActivity"
    android:background="@color/background_color"
    >

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brand"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:layout_marginTop="50dp"
    />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/attention"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout"
        app:layout_constraintBottom_toTopOf="@id/plantsImage"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >
        <com.google.android.material.button.MaterialButton
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/register_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:letterSpacing="0.05"
            />

        <com.google.android.material.button.MaterialButton
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/register_btn"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:letterSpacing="0.05"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="O también"
                android:textColor="@color/md_grey_400"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toStartOf="@id/tvText"
                android:background="@color/md_grey_400"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/tvText"
                android:background="@color/md_grey_400"
                />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:text="@string/continue_as_a_guest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:id="@+id/guess_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:letterSpacing="0.05"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/plantsImage"
        android:layout_width="445dp"
        android:layout_height="134dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/plants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/plants" />

</androidx.constraintlayout.widget.ConstraintLayout>