<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/searchToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/search"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/search_sheet_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            app:tabTextAppearance="@style/TabLayoutTextAppearance">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/search_plants_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plants" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/search_fungi_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fungi" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <!--    <Spinner-->
<!--        android:id="@+id/searchBy"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="32dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/mi_search_view"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.881"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.695" />-->

    <SearchView
        android:id="@+id/mi_search_view"
        android:layout_width="411dp"
        android:layout_height="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnFilters"
        android:layout_width="410dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mi_search_view">

        <Button
            android:id="@+id/btn_common_name"
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/common_name"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/location_data"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/btn_recollection"
            android:layout_width="140dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/specific_collection_area"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />

    </androidx.appcompat.widget.LinearLayoutCompat>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/search_recyclerView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_below="@+id/btnFilters"-->
<!--        android:scrollbarStyle="outsideInset"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnFilters"-->
<!--        tools:listitem="@layout/plant_card" />-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/searchPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFilters"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilters"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
    />

</androidx.constraintlayout.widget.ConstraintLayout>