<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/new_plant"
    >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/layoutNewPlant"
            >

            <TextView
                android:id="@+id/specimen_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/specimen_data"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:paddingBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commonNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/specimen_data"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commonNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/commonNameTextInputLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
            />

            <Spinner
                android:id="@+id/genus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/family"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <Spinner
                android:id="@+id/specie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/genus"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plantDescriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/specimen_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/specie"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plantDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:gravity="top"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/plantStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/plantDescriptionTextInputLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberSpecimensTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_specimens"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/plantStatus"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberSpecimensInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/location_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/numberSpecimensTextInputLayout"
                android:text="@string/location_data"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:paddingBottom="20dp"
                />

            <Spinner
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/location_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
            />

            <Spinner
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/country"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
            />

            <Spinner
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/state"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specificCollectionAreaTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/specific_collection_area"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/city"
                tools:layout_editor_absoluteX="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/specificCollectionAreaInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/specificCollectionAreaTextInputLayout"
                android:text="@string/coordinates"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:paddingBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/latitudeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/coordinates"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/latitudeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/longitudeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/latitudeTextInputLayout"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/longitudeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/habitat_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/longitudeTextInputLayout"
                android:text="@string/habitat_data"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:paddingBottom="20dp"
                />

            <Spinner
                android:id="@+id/habitat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/habitat_data"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                />

            <Spinner
                android:id="@+id/habitatDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/habitat"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <Spinner
                android:id="@+id/biostatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/habitatDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/cancel_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/biostatus"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:letterSpacing="0.05"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/registerSpecimen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/register_btn"
                app:layout_constraintTop_toBottomOf="@id/cancel_btn"
                android:backgroundTint="@color/colorPrimary"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:letterSpacing="0.05"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>