<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragments.SearchFunghiFragment">

        <SearchView
            android:id="@+id/funghi_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:iconifiedByDefault="false"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnFiltersFunghi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/funghi_search_view">

                <Button
                    android:id="@+id/btn_common_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/common_name"
                    android:textAllCaps="false"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <Button
                    android:id="@+id/btn_family"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/family"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

                <Button
                    android:id="@+id/btn_genus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/genus"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchFunghi_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnFiltersFunghi"
            android:scrollbarStyle="outsideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFiltersFunghi"
            app:layout_constraintVertical_bias="0.0"
            android:paddingBottom="210dp"
            android:clipToPadding="false"
            tools:listitem="@layout/fungus_card" />

</androidx.constraintlayout.widget.ConstraintLayout>